--- a/samples/demo.ipynb
+++ b/samples/demo.ipynb
@@ -128,13 +128,13 @@
     }
    ],
    "source": [
-    "class InferenceConfig(coco.CocoConfig):\n",
+    "class ShapeInferenceConfig(coco.CocoConfig):\n",
     "    # Set batch size to 1 since we'll be running inference on\n",
     "    # one image at a time. Batch size = GPU_COUNT * IMAGES_PER_GPU\n",
     "    GPU_COUNT = 1\n",
     "    IMAGES_PER_GPU = 1\n",
     "\n",
-    "config = InferenceConfig()\n",
+    "config = ShapeInferenceConfig()\n",
     "config.display()"
    ]
   },
